...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LoginBackground">

    <Switch
        android:id="@+id/selectInsideDogSwitch"
        android:layout_width="172dp"
        android:layout_height="31dp"
        android:text="Want Inside Dog?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
...
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="#000000"
        android:background="@drawable/button_format"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />


    <Button
        android:id="@+id/ToSwipingButton"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:background="@drawable/button_format"
        android:text="Dog Swiping"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <Button
        android:id="@+id/toSwipingButtonSitter"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:background="@drawable/button_format"
        android:text="Sitter Swiping"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_format"
        android:text="BACK"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/saveFiltersButton"
        android:layout_width="106dp"
        android:layout_height="53dp"
        android:background="@drawable/button_format"
        android:text="SAVE FILTERS"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <Button
        android:id="@+id/messageBtn1"
        android:layout_width="246dp"
        android:layout_height="43dp"
        android:background="@drawable/button_format"
        android:text="MESSAGES"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/buttonSettingsBuyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_format"
        android:text="Settings"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <Switch
        android:id="@+id/selectPottyTrainedSwitch"
        android:layout_width="177dp"
        android:layout_height="34dp"
        android:text="Want Potty Trained?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <EditText
        android:id="@+id/editTextBreedFilter"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="Enter a breed"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <Switch
        android:id="@+id/selectBreedFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Want Breed Filter?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
...
